--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
